// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly Mount 1`] = `
<App>
  <h1>
    Display Active Users Account Details
  </h1>
  <h3>
    Fetching Users...
  </h3>
  <Button
    label="button"
  >
    <div
      className="button-style"
      data-testid="button"
    >
      Hi 
      button
    </div>
  </Button>
</App>
`;

exports[`renders correctly Shallow 1`] = `
<Fragment>
  <h1>
    Display Active Users Account Details
  </h1>
  <h3>
    Fetching Users...
  </h3>
  <Button
    label="button"
  />
</Fragment>
`;
